fix(components): fix text overflow of headings in FlipModal and FlipAppLayout

--- a/packages/swirl-components/src/components/flip-app-layout/flip-app-layout-base.css
+++ b/packages/swirl-components/src/components/flip-app-layout/flip-app-layout-base.css
@@ -228,6 +228,16 @@
   gap: var(--s-space-8);
 }
 
+.app-layout__app-name {
+  min-width: 0;
+
+  & .heading {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+}
+
 .app-layout__navigation-back-button {
   margin-left: calc(-1 * var(--s-space-4));
 }
@@ -292,7 +302,7 @@
   min-width: 0;
   flex-grow: 1;
 
-  & ::part(heading) {
+  & .heading {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
